JIRA-12345: Correct swagger and add NOT FOUND Exception
